add attendees to event
